<resources>
    <string name="app_name">测试环境</string>
    <string name="title_login">综合生产调度系统</string>
    <string name="hint_username">请输入用户名:</string>
    <string name="hint_password">请输入密码:</string>
    <string name="setting_remenber_password">记住密码</string>
    <string name="setting_author_login">自动登录</string>
    <string name="btn_login">登录</string>
    <string name="dailog_title_update">正在登录</string>
    <string name="title_home">综合生产调度管理系统</string>
    <string name="login_error">登录失败</string>
    <string name="retry">重试</string>
    <string name="toolbar_title">综合生产调度管理系统</string>
    <string name="btn_exit">退出</string>
    <string name="title_acceptance_stay">待验收</string>
    <string name="acceptance_red">红色字体: 已预验收</string>
    <string name="acceptance_black">黑色字体: 未预验收</string>
    <string name="btn_refrash">刷新</string>
    <string name="btn_commit">提交</string>
    <string name="btn_return">返回</string>
    <string name="btn_cancle">取消</string>
    <string name="task_valume">计划缺口:</string>
    <string name="text_plan_demand">红色字体: 需求</string>
    <string name="text_plan_plan">黑色字体: 计划</string>
    <string name="text_save_voyage">保存</string>
    <string name="text_ship_location">装船地点</string>
    <string name="text_unfilled">未填写</string>
    <string name="text_ship_date">装船日期</string>
    <string name="text_sample_num">基样编号</string>
    <string name="text_material_from">料源来源地</string>
    <string name="text_start_date">开始装船时间</string>
    <string name="text_end_date">结束装船时间</string>
    <string name="text_come_date">抵达码头时间</string>
    <string name="text_exit_date">离开码头时间</string>
    <string name="text_come_anchor_date">到达锚地时间</string>
    <string name="text_clean_date">清关时间</string>
    <string name="text_material_ordar">材料分类</string>
    <string name="title_voyage">船次记录表</string>
    <string name="text_warehouse_space">舱容:</string>
    <string name="text_detain_spance">"扣        方:"</string>
    <string name="text_amount_time">量方时间:</string>
    <string name="title_amount_detail">量方管理</string>
    <string name="text_batch">BATCH:</string>
    <string name="btn_add_sample">添加取样</string>
    <string name="supply_red">红色字体: 已验砂</string>
    <string name="supply_black">黑色字体: 未验砂</string>
    <string name="amount_red">红色字体: 已量方</string>
    <string name="amount_black">黑色字体: 未量方</string>
    <string name="voyage_red">红色字体:  已完善</string>
    <string name="voyage_black">黑色字体: 未完善</string>
    <string name="recorded_red">红色字体: 已过砂</string>
    <string name="recorded_black">黑色字体: 未过砂</string>
    <string name="recorded_title">过砂记录</string>
    <string name="dialog_loading">加载中</string>
    <string name="sampledetail_title">取样记录</string>
    <string name="hint_fill">请填写</string>
    <string name="dialog_delete">删除</string>
    <string name="dialog_sample_delete_msg">是否删除取样记录</string>
    <string name="title_sample">取样管理</string>
    <string name="sample_red">红色字体: 已取样</string>
    <string name="sample_black">黑色字体: 未取样</string>
    <string name="title_scanner">供应商填写进场材料</string>
    <string name="scanner_red">红色字体: 已完善</string>
    <string name="scanner_black">黑色字体: 未完善</string>
    <string name="scanner_stowage">装舱现场照片</string>
    <string name="scanner_ship_bill">舱单</string>
    <string name="scanner_consignment_bill">托运单</string>
    <string name="scanner_gravel">碎石粉装船记录表</string>
    <string name="scanner_strip_plot">选择计划航线图</string>
    <string name="scanner_delivery_bill">送货单</string>
    <string name="scanner_strip_plot_plan">计划航线图</string>
    <string name="scanner_qc">预验收质量记录表</string>
    <string name="scanner_customs">海关放行通知照片</string>
    <string name="scanner_contrast">航线对比图</string>
    <string name="scanner_customs_bill">海关单</string>
    <string name="btn_determine">确定</string>
    <string name="item_sample_tag">取样编号:</string>
    <string name="text_scan_not">未完成</string>
    <string name="text_scan_alr">已完成</string>
    <string name="title_scanner_stowage">装舱现场照片</string>
    <string name="title_scanner_ship_bill">舱单</string>
    <string name="title_scanner_consignment_bill">托运单</string>
    <string name="title_scanner_gravel">碎石粉装记录表</string>
    <string name="title_scanner_strip_plot">选择计划航线图</string>
    <string name="title_scanner_strip_plot_plan">计划航线图</string>
    <string name="title_scanner_delivery_bill">送货单</string>
    <string name="title_scanner_qc">预验收质量记录表</string>
    <string name="title_scanner_customs">海关放行通知照片</string>
    <string name="title_scanner_contrast">航线对比图</string>
    <string name="title_scanner_customs_bill">海关单</string>
    <string name="text_supply_ship">供砂船:</string>
    <string name="text_receive_ship">施工船:</string>
    <string name="text_start_time">开始时间:</string>
    <string name="text_end_time">结束时间:</string>
    <string name="text_record_before">过砂前吃水</string>
    <string name="text_record_after">过砂后吃水</string>
    <string name="et_hint">0</string>
    <string name="setting_recorde_finish">过砂完成</string>
    <string name="text_name">姓名:</string>
    <string name="text_time">考勤日期:</string>
    <string name="title_attendance">考勤</string>
    <string name="et_hint_remark">添加备注</string>
    <string name="btn_quiry">搜索全部</string>
    <string name="text_date_select">日期选择:</string>
    <string name="attendance_audit">考勤管理</string>
    <string name="btn_agree">审核通过</string>
    <string name="btn_no_agree">不通过</string>
    <string name="text_attendance_remark">考勤备注:</string>
    <string name="item_cons_ship">施工船舶:</string>
    <string name="hint_click">点击选择</string>
    <string name="text_amount_photo">量方照片: (量方纸照片必填)</string>
    <string name="text_info">信息审核</string>
    <string name="text_scan">资料审核</string>
    <string name="text_stop">停工</string>
    <string name="text_throw_sand">抛砂</string>
    <string name="title_construction">施工日报</string>
    <string name="btn_down">停工</string>
    <string name="tv_hint">请选择</string>
    <string name="title_thread_sand">抛砂记录</string>
    <string name="btn_add">新增分区</string>
    <string name="title_partition">施工分区</string>
    <string name="attendance_select_all">全部选中</string>
    <string name="attendance_unselect_all">取消全部选中</string>
    <string name="btn_down_log">停工日报</string>
    <string name="btn_scanner_all">搜索所有</string>
    <string name="title_down_log">停工日报</string>
    <string name="btn_thread_sand_log">抛砂日报</string>
    <string name="title_thread_sand_log">抛砂日报</string>
    <string name="title_exit_application">供应商退场申请</string>
    <string name="exit_red">红色字体: 已申请</string>
    <string name="exit_black">黑色字体: 未申请</string>
    <string name="text_change_password">修改密码</string>
    <string name="text_sex">性别</string>
    <string name="text_section">部门</string>
    <string name="text_duties">职务</string>
    <string name="text_phone">手机</string>
    <string name="text_email">Email</string>
    <string name="text_tell">电话</string>
    <string name="title_mine">我的资料</string>
    <string name="hint_ori_pass">请输入原密码</string>
    <string name="hint_new_pass">请输入新密码</string>
    <string name="hint_new_pass_again">请再次输入新密码</string>
    <string name="btn_commit_change">提交修改</string>
    <string name="title_change_pass">修改密码</string>
    <string name="text_man">男</string>
    <string name="text_woman">女</string>
    <string name="text_about">软件版本</string>
    <string name="text_current_version">当前版本名称</string>
    <string name="text_check_update">检查更新</string>
    <string name="btn_add_recorded">添加过砂记录</string>
    <string name="title_recorded_sand_detail_list">过砂记录</string>
    <string name="btn_update">修改</string>
    <string name="select_time">全部时间</string>
    <string name="select_sub">全部供应商</string>
    <string name="select_ship">全部供砂船舶</string>
    <string name="title_analysis">供砂进度跟踪</string>
    <string name="btn_ok">确定</string>
    <string name="title_analysis_detail">供应商进场计划进度跟踪</string>
    <string name="title_evaluation">预验收反馈</string>
    <string name="title_rank">供应商排行</string>
    <string name="title_contact">通讯录</string>
    <string name="text_current_version_code">当前版本号</string>
    <string name="btn_save">保存</string>
    <string name="commit_tip">提交数据后, 将不能再次修改, 是否提交?</string>
    <string name="title_exit_assessor">退场审核</string>
    <string name="exit_assessor_red">红色字体: 已审核</string>
    <string name="exit_assessor_black">黑色字体: 未审核</string>
    <string name="title_feedback">退场反馈</string>
    <string name="menu_view_comments">查看退回意见</string>
    <string name="title_construction_log_manager">日报管理</string>
    <string name="action_search">搜索</string>
    <string name="title_tomorrow_plan">来船计划</string>
    <string name="desc_partition">panel012 ~ panel016分区生成规则:\n分区前缀填panel###, 开始数填012, 结束数填016\n\npanela12~panelg12分区生成规则:\n分区前缀填写panel#12，开始数填a，结束数填g
\n\n说明：#代表变量数，一个#符号代表一个字符
</string>
    <string name="title_bcf_log">BCF日志</string>
    <string name="title_bcf_thread">BCF抛砂</string>
    <string name="text_quantume_tag">提示:\n当供砂船给第一艘施工船供砂结束，且仍需向第二艘施工船供砂时，请分别填写每艘施工船抛填的预估工程量。
\n\n当供砂船仅给一艘施工船供砂时无需填写预估工程量。</string>
    <string name="select_thread">全部类型</string>
    <string name="title_today_plan">今日来船(已预验收航次)</string>
    <string name="title_hse_check">HSE检查记录</string>
    <string name="title_hse_check_add">新增HSE检查记录</string>
    <string name="title_hse_check_defect">HSE检查记录缺陷</string>
    <string name="title_hse_check_defect_add">HSE检查记录缺陷</string>
    <string name="title_hse_retification">HSE整改</string>
    <string name="title_hse_retification_add">HSE整改</string>
    <string name="title_hse_retification_list">HSE已整改</string>
    <string name="title_boat_inquire">砂船自查</string>
    <string name="title_certificate_supervision">持证监督</string>
    <string name="title_violation_records">违规记录</string>
    <string name="title_hse_check_select_ship">选择受检船舶</string>
    <string name="title_album">施工相册</string>
    <string name="title_mechanical">机电设备</string>
    <string name="title_crew">人员信息</string>
    <string name="title_training">培训</string>
    <string name="title_aaa">交底</string>

    <!-- 供砂管理title -->
    <array name="home_item_pop">
        <item>供应商进场计划</item>
        <item>供应商航次信息完善</item>
        <item>供应商航次完善扫描件</item>
        <item>待验收航次</item>
        <item>量方管理</item>
        <item>待验砂船次</item>
        <item>验砂取样</item>
        <item>过砂记录</item>
    </array>

    <!-- 材料分类 -->
    <array name="voyage_spinner">
        <item>请选择材料分类</item>
        <item>细砂（0~3mm）</item>
        <item>细砂（0~5mm）</item>
        <item>粗砂</item>
    </array>

    <!-- 时间选择 -->
    <array name="select_time">
        <item>全部</item>
        <item>未来7天</item>
        <item>最近3天</item>
        <item>最近7天</item>
        <item>最近1月</item>
        <item>最近3月</item>
        <item>自定义时间</item>
    </array>

    <!-- 时间选择(预验收评价) -->
    <array name="select_acceptance_time">
        <item>全部</item>
        <item>上一周</item>
        <item>前一周</item>
        <item>上一月</item>
        <item>前一月</item>
        <item>自定义时间</item>
    </array>

    <array name="select_thread">
        <item>全部</item>
        <item>抛砂</item>
        <item>来砂</item>
        <item>停工</item>
    </array>

    <!-- 时间选择(HSE检查) -->
    <array name="select_hse_check_time">
        <item>近一月</item>
        <item>自定义时间</item>
    </array>

    <!-- 处理状态(HSE缺陷) -->
    <array name="select_hse_defect_status">
        <item>未处理</item>
        <item>已处理</item>
    </array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_device_repair">设备维修</string>
    <string name="tv_input">请输入</string>
    <string name="title_device_maintenance">维护保养</string>
</resources>
