<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/text_gray_bg"
              android:orientation="vertical">

    <include layout="@layout/view_toolbar"/>

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/et_ori_pass"
        style="@style/text_tag"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginRight="@dimen/margin_10"
        android:layout_marginTop="@dimen/margin_10"
        android:background="@drawable/white_bg"
        android:drawableLeft="@mipmap/ico_password"
        android:drawablePadding="10dp"
        android:hint="@string/hint_ori_pass"
        android:padding="@dimen/margin_10"/>

    <android.support.v7.widget.AppCompatEditText
        android:maxLength="20"
        android:id="@+id/et_change_pass"
        style="@style/text_tag"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginRight="@dimen/margin_10"
        android:layout_marginTop="@dimen/margin_10"
        android:background="@drawable/white_bg"
        android:drawableLeft="@mipmap/ico_password"
        android:drawablePadding="10dp"
        android:hint="@string/hint_new_pass"
        android:padding="@dimen/margin_10"/>

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/et_new_pass_again"
        style="@style/text_tag"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginRight="@dimen/margin_10"
        android:layout_marginTop="@dimen/margin_10"
        android:background="@drawable/white_bg"
        android:drawableLeft="@mipmap/ico_password"
        android:drawablePadding="10dp"
        android:hint="@string/hint_new_pass_again"
        android:padding="@dimen/margin_10"/>

    <Button
        android:id="@+id/btn_commit_change"
        style="@style/text_title_w"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginRight="@dimen/margin_10"
        android:layout_marginTop="@dimen/margin_10"
        android:background="@drawable/btn_bg"
        android:text="@string/btn_commit_change"/>

</LinearLayout>