<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:background="@color/text_gray_bg"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <include layout="@layout/view_toolbar"/>

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="200dp">
        <ImageView
            android:id="@+id/iv_debug"
            android:src="@mipmap/plan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginTop="@dimen/margin_10"
            style="@style/text_description"
            android:text="@string/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <include layout="@layout/view_divi"/>
    <RelativeLayout
        android:gravity="center_vertical"
        android:background="@color/text_white"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height">
        <TextView
            android:layout_marginLeft="@dimen/margin_10"
            style="@style/text_tag"
            android:text="@string/text_current_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_version"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/margin_10"
            style="@style/text_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

    <include layout="@layout/view_divi"/>
    <RelativeLayout
        android:gravity="center_vertical"
        android:background="@color/text_white"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height">
        <TextView
            android:layout_marginLeft="@dimen/margin_10"
            style="@style/text_tag"
            android:text="@string/text_current_version_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_version_code"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/margin_10"
            style="@style/text_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <include layout="@layout/view_divi"/>
    <RelativeLayout
        android:id="@+id/rl_update"
        android:gravity="center_vertical"
        android:background="@color/text_white"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height">
        <TextView
            android:layout_marginLeft="@dimen/margin_10"
            style="@style/text_tag"
            android:text="@string/text_check_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
</LinearLayout>